--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 banner.png
+.gradle 
+ .idea/ 
+ !.idea/icon*.png 
+ *.iml 
+ build/ 
+ src/main/gen 
+ src/main/resources/templates.list 
+ src/main/resources/gitignore/*
